<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:id="@+id/menu_change_password_old"
        android:layout_margin="7dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:id="@+id/menu_change_password_new"
        android:layout_margin="7dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_conform_password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:id="@+id/menu_change_password_con"
        android:layout_margin="7dp" />


</LinearLayout>