<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_received_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:theme="@style/MyButton"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/received_model_view_address"
                android:hint="@string/sender_address"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:id="@+id/received_model_edit_address"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/received_model_view_order_no"
                android:hint="@string/order_number_t"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/order_number"
                android:id="@+id/received_model_edit_order_no"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />


            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/received_model_view_status"
                android:hint="@string/transporter_name_t"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/transporter_name"
                android:id="@+id/received_model_edit_status"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>